--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </nav>
     </header>
     <!-- hero ckass -->
-    <main class="hero">
+    <main class="hero"></main>
       <!-- aside content on the right -->
     <aside class="content">
       <!-- updated id to section so link will work -->
